feat: mark all task fix

--- a/index.html
+++ b/index.html
@@ -33,26 +33,7 @@
       <li class="todo-list-active todo-list-welcome-hide">
         &#128526; Все задачи выполнены
       </li>
-      <ul class="todo-list">
-        <!--         <li class="todo-task">
-          <input type="checkbox" id="tick1" class="checkbox__list" />
-          <label class="completed" for="tick1"></label>
-          <span class="todo-title">asdasd</span>
-          <button class="delete">
-            <img src="/img/trash_bin.png" alt="#" />
-          </button>
-        </li> -->
-        <!-- <li class="todo-task">
-          <label class="completed">
-            <input checked type="checkbox" class="checkbox__list" />
-            <div class="custom-checkbox"></div>
-          </label>
-          <span class="todo-title">asdasd</span>
-          <button class="delete">
-            <img src="/img/trash_bin.png" alt="#" />
-          </button>
-        </li> -->
-      </ul>
+      <ul class="todo-list"></ul>
     </div>
     <footer class="footer footer-hide">
       <div class="footer__counter">
