fix: markup for tabs

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div class="footer__left">left</div>
       </div>
       <div class="footer__tabs">
-        <div id="allTasks" class="footer__tab">All</div>
+        <div id="allTasks" class="footer__tab footer__tabs-active">All</div>
         <div id="doneTasks" class="footer__tab">Done</div>
         <div id="activeTasks" class="footer__tab">Active</div>
       </div>
