--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Стажировка для PnS" />
     <meta name="keywords" content="стажировка" />
-    <link rel="stylesheet" href="/css/index.css" />
+    <link rel="stylesheet" href="/styles/index.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -41,9 +41,9 @@
         <div class="footer__left">left</div>
       </div>
       <div class="footer__tabs">
-        <div id="allTasks" class="footer__tab">All</div>
-        <div id="doneTasks" class="footer__tab">Done</div>
-        <div id="activeTasks" class="footer__tab">Active</div>
+        <div id="tabEvery" class="footer__tab">All</div>
+        <div id="tabDone" class="footer__tab">Done</div>
+        <div id="tabActive" class="footer__tab">Active</div>
       </div>
       <div class="footer__clearall">clear done</div>
     </footer>
