fix: code-styling

--- a/index.html
+++ b/index.html
@@ -19,7 +19,12 @@
     <h1>to-do</h1>
     <div class="todo">
       <label class="todo__checkbox"
-        ><input type="checkbox" name="check-for-all" id="checkAll" />
+        ><input
+          type="checkbox"
+          name="check-for-all"
+          id="checkAll"
+          checked="false"
+        />
         <div class="custom"></div>
       </label>
       <input type="text" class="todo__input" placeholder="Что нужно сделать?" />
