feat: style codding

--- a/index.html
+++ b/index.html
@@ -25,21 +25,7 @@
       <input type="text" class="todo__input" placeholder="Что нужно сделать?" />
     </div>
     <div class="todo-content">
-      <!-- <div class="todo-list-welcome">&#128559; Список дел пуст</div>
-      <div class="todo-list-marked">&#128559; Список выполненных дел пуст</div>
-      <div class="todo-list-active">&#128526; Все задачи выполнены</div> -->
-      <ul class="todo-list">
-        <li class="todo-task">
-          <label class="completed">
-            <input type="checkbox" />
-            <div class="custom-checkbox"></div>
-          </label>
-          <input class="todo-title" type="text" value="4654646" readonly />
-          <button class="delete">
-            <img src="/img/trash_bin.png" alt="#" />
-          </button>
-        </li>
-      </ul>
+      <ul class="todo-list"></ul>
     </div>
     <footer class="footer">
       <div class="footer__counter">
